# DENGUE-FORECASTING-IN-BRAZIL

.github/workflows/: deploy.yml
Intellishore/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  drift_report_2025.txt  monitoring_summary.json  pyproject.toml  requirements.txt
Intellishore/data/: infodengue_capitals_subsetBR.csv  sst_indices.csv
Intellishore/images/: dengue_architecture.drawio
Intellishore/models/: AdaBoost_test2025_20260202_115332_metadata.json  AdaBoost_test2025_20260202_115509_metadata.json  AdaBoost_test2025_20260202_115726_metadata.json  AdaBoost_test2025_20260202_121735.pkl  AdaBoost_test2025_20260202_121735_metadata.json  GradientBoosting_test2025_20260202_183405.pkl  GradientBoosting_test2025_20260202_183405_metadata.json  baseline_metadata.json  baseline_model.pkl
Intellishore/scripts/: check_drift_runs.py  check_mlflow.py  deploy_gcp.ps1  deploy_gcp.sh  drift_scheduler.py  monitor_drift.py  run_app.ps1  run_app.sh  run_pipeline.bat  run_pipeline.ps1  run_pipeline.sh  run_training_with_monitoring.ps1  run_training_with_monitoring.sh  test_drift_logging.py
Intellishore/src/: __init__.py  main.py
Intellishore/src/core/: __init__.py  data_loader.py  feature_engineer.py  forecaster.py  model_trainer.py
Intellishore/src/monitoring/: __init__.py  drift_dashboard_generator.py  model_monitor.py  model_monitor_integration.py
Intellishore/src/utils/: __init__.py  config.py  model_manager.py  visualizer.py
mlflow/: Dockerfile
