[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dengue-forecasting"
version = "2.0.0"
description = "Production-ready ML system for dengue fever prediction with automated drift detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["machine-learning", "dengue", "forecasting", "mlflow", "drift-detection", "time-series"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "mlflow>=2.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.14.0",
    "schedule>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
cloud = [
    "google-cloud-storage>=2.0.0",
    "google-cloud-run>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/dengue-forecasting"
Documentation = "https://github.com/yourusername/dengue-forecasting#readme"
Repository = "https://github.com/yourusername/dengue-forecasting.git"
Issues = "https://github.com/yourusername/dengue-forecasting/issues"

[project.scripts]
dengue-train = "src.main:main"
dengue-drift-check = "scripts.drift_scheduler:main"

[tool.setuptools]
packages = ["src", "src.core", "src.monitoring", "src.utils"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | build
  | dist
  | mlruns
  | models
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.flake8]
max-line-length = 100
exclude = [".git", ".venv", "__pycache__", "build", "dist", "mlruns", "models"]
ignore = ["E203", "W503"]
